Fixed home page overflow
& Restyled sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
 html, body, #root, .App{
   height: 100%;
 }
+body{
+  overflow: hidden;
+}
 .App{
   display:flex;
 }
@@ -23,7 +26,6 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 }
 .main{
   width: 75%;
-  overflow-y: unset;
   margin: 5% 0 0 5%;
 }
 /* Sidebar */
@@ -158,6 +160,7 @@ label{
 /* Todo Item */
 .todos-section{
   width: 40%;
+  overflow-y: hidden;
   display: flex;
   flex-flow: column;
 }
@@ -306,16 +309,23 @@ label{
 .burger{
   display: none;
   flex-flow: column;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  background: #4965F2;
+  padding: 5%;
   cursor: pointer;
-  position: absolute;
+  width: 30px;
+  height: 30px;
+  position: fixed;
   top:3%;
   left: 2%;
   z-index: 1;
 }
 .burger-line{
-  width: 30px;
+  width: 100%;
   height: 3px;
-  background: #4965F2;
+  background: white;
   margin: 2px 0;
 }
 .translated{
@@ -452,6 +462,7 @@ label{
 
 .profile-section{
   display:flex;
+  overflow-y: hidden;
   width: 90%;
 }
 .user-profile-right{
@@ -686,6 +697,7 @@ label{
     width: 100%;
     height: 100%;
     border-bottom: 1px solid white;
+    top:0;
     margin:0;
     z-index: 1;
     background: rgba(255, 255, 255, 0.5);
@@ -693,7 +705,7 @@ label{
   .auth-container .auth-hero{
     width: 100%;
     margin: 0;
-    z-index: 0;;
+    z-index: 0;
     position: absolute;
   }
   .login-form input, .register-form input{
@@ -731,6 +743,9 @@ label{
     transition: .5s ease-in-out;
     width: 60%;
   }
+  .todo{
+    width: unset;
+  }
   .todos-section h1{
     margin-top:3%;
   }
@@ -762,15 +777,17 @@ label{
 @media screen and (max-width: 768px) {
   .todos-section{
     width: 80%;
-    margin:0 10%;
+    margin:20% 10%;
   }
   .sidebar{
-    width: 50%;
+    position: fixed;
+    width: 100%;
   }
   .todo-sidebar{
     width: 90%;
     border-radius: 25px;
-    margin: 12.5% 5%;
+    margin: 5%;
+    z-index: 4;
     align-items: center;
     text-align: center;
   }
